Add api filter options
# Conflicts:
#	pnpm-lock.yaml
