# src/server/services/wmo/wmo-route-handlers.ts
@@ -1,10 +1,11 @@
 import type { Request, Response } from 'express';
-import z from 'zod';
 
-import { ZORGNED_JZD_API_CONFIG_KEY } from './wmo-service-config.ts';
-import { fetchActueleWRAVoorzieningenCompact } from './wmo.ts';
+import {
+  voorzieningenRequestInput,
+  ZORGNED_JZD_API_CONFIG_KEY,
+} from './wmo-service-config.ts';
+import { fetchWmoVoorzieningenCompact } from './wmo.ts';
 import type { AuthProfileAndToken } from '../../auth/auth-types.ts';
-import { ZodValidators } from '../../helpers/validation.ts';
 import {
   sendResponse,
   sendBadRequestInvalidInput,
@@ -50,10 +51,6 @@ export async function fetchZorgnedJZDAanvragen(
   return sendResponse(res, response);
 }
 
-const voorzieningenRequestInput = z.object({
-  bsn: ZodValidators.BSN,
-});
-
 export async function handleVoorzieningenRequest(req: Request, res: Response) {
   // Validate the request body so we can be sure it has the correct shape and values.
   let validatedRequestBody;
@@ -64,7 +61,12 @@ export async function handleVoorzieningenRequest(req: Request, res: Response) {
   }
 
   const bsn = validatedRequestBody.bsn;
-  const response = await fetchActueleWRAVoorzieningenCompact(bsn);
+  const maActies = validatedRequestBody.maActies;
+  const maProductgroep = validatedRequestBody.maProductgroep;
+  const response = await fetchWmoVoorzieningenCompact(bsn, {
+    maActies,
+    maProductgroep,
+  });
 
   return sendResponse(res, response);
 }
